--- a/style.css
+++ b/style.css
@@ -2,5 +2,76 @@
     margin: 0;
     padding: 0;
     list-style: none;
+    text-decoration: none;
     box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
 }
+
+header {
+    background-color: #ffe62d;
+}
+
+.mainContainer h1 {
+    font-size: 36px;
+    font-weight: 900;
+    color: black;
+}
+
+.logo {
+    font-size: 24px;
+    color: black;
+    font-weight: 700;
+    padding: 8px 12px;
+    margin-left: 400px;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav-links {
+    flex: 1;
+    text-align: right;
+    margin-right: 400px;
+    font-weight: 500;
+}
+
+.nav-links ul li {
+    list-style: none;
+    display: inline-block;
+    padding: 2rem 2rem;
+    position: relative;
+}
+
+.nav-links ul li a {
+    color: black;
+    text-decoration: none;
+    font-size: 24px;
+}
+
+.mainPage {
+    display: flex;
+}
+
+.mainPage img {
+    height: 300px;
+    width: 600px;
+    margin-right: 430px;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    border: 5px solid black;
+}
+
+.mainContainer {
+    height: 300px;
+    width: 600px;
+    margin-right: 390px;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    margin-left: 350px;
+    padding-left: 50px;
+}
+
+.mainContainer h1 {}
