--- a/style.css
+++ b/style.css
@@ -15,11 +15,12 @@ nav {
     display: flex;
     justify-content: center;
     padding: 50px;
+    background-color: #1f2937;
 }
 
 .logo {
     font-size: 36px;
-    color: black;
+    color: white;
     font-weight: 700;
     flex-basis: 50%;
     padding-left: 125px;
@@ -37,11 +38,17 @@ nav {
 
 
 .nav-links ul li a {
-    color: black;
+    color: white;
     text-decoration: none;
     font-size: 36px;
     font-weight: 500;
 }
+
+.nav-links ul li a:hover {
+    color: red;
+    transition: .3s;
+}
+
 
 /* ----------------- First Section -------------------- */
 
@@ -49,7 +56,7 @@ nav {
     display: flex;
     justify-content: space-around;
     padding-top: 200px;
-    padding-bottom: 400px;
+    padding-bottom: 350px;
     padding-left: 100px;
     padding-right: 100px;
 }
@@ -76,7 +83,8 @@ nav {
 }
 
 button {
-    background: lightblue;
+    background: #3882F6;
+    color: white;
     height: 40px;
     width: 100px;
     border-radius: 10px;
@@ -95,23 +103,86 @@ section h2 {
 
 .section2 ul {
     display: flex;
-    justify-content: space-around;
-}
+    justify-content: center;
+    text-align: center;
+    gap: 50px;
+    margin-bottom: 200px;
 
-.fact {
-    height: 300px;
-    width: 350px;
-    border: 5px solid blue;
-    border-radius: 10%;
 }
 
 .factImg {
-    height: 150px;
-    width: 150px;
+    display: flex;
+    height: 250px;
+    width: 250px;
+    justify-content: center;
+    align-items: center;
 }
 
 .factImg img {
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    border: 5px solid #3882F6;
+    border-radius: 10%;
+    margin-bottom: 20px;
+}
+
+
+/* ---------------Section 3----------------- */
+
+.section3 {
+    background-color: #e5e7eb;
+    height: 500px;
+    text-align: center;
+    padding-top: 180px;
+}
+
+.section3 p {
+    font-weight: 200;
+    font-size: 50px;
+}
+
+.section3 span {
+    font-weight: 500;
+    font-size: 30px;
+}
+
+
+/* --------------Section 4------------------- */
+
+.cta {
+    height: 400px;
+}
+
+.section4 {
+    display: flex;
+    justify-content: space-around;
+    margin: auto;
+    margin-top: 150px;
+    width: 50%;
+    height: 150px;
+    width: 950px;
+    background-color: #3882F6;
+    color: white;
+    border-radius: 10px;
+    padding-top: 50px;
+}
+
+.section4 button {
+    border: 2px solid white;
+    font-weight: 700;
+}
+
+.p1 {
+    font-size: 20px;
+    font-weight: 700;
+}
+
+
+footer {
+    height: 150px;
+    background-color: #1f2937;
+    color: white;
+    margin: auto;
+    text-align: center;
+    padding-top: 70px;
 }
